<resources>
    <string name="app_name">PnP2_NewProject</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="remind_to_take_a_break">Remind me to take a break</string>
    <string name="break_timer">break_timer</string>
    <string name="remind_me">Remind me to take a break</string>
    <string name="day_night">day_night</string>
    <string name="theme_changer">Change Theme</string>
    <string name="change_theme">Change Theme</string>
    <string name="go_back_to_main">Go Back to Main</string>
    <string name="go_back_summary">Tap to return to main screen</string>



    <string-array name="pref_remind_me_to_take_a_break">
        <item>0/Cancel</item>
        <item>15 Minutes</item>
        <item>30 Minutes</item>
        <item>45 Minutes</item>
        <item>1 Hours</item>
        <item>1 Minute/Test</item>
    </string-array>

    <string-array name="pref_duration">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="pref_theme_choices">
        <item>Light</item>
        <item>Dark</item>
        <item>System</item>
    </string-array>

    <string-array name="pref_choices">
        <item>light</item>
        <item>dark</item>
        <item>system</item>
    </string-array>

</resources>